# prefpoll

./: .env  .gitignore  Cargo.toml  README.md  configuration.yaml  index.html  package.json  results.html  spec.yaml  sqlx-data.json  vote.html
View/: app.js  index.html  package-lock.json  package.json  results.html
View/public/: styles.css
api/: Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
api/configuration/: local.yaml
api/migrations/: 20220719174027_create_polls_table.sql  20220817174943_make_option_json.sql  20220817181542_alter_columns_text.sql  20220819192058_alter_polls_add_number_options.sql  20220908231046_add_duplication_checks.sql
api/src/: main.rs  startup.rs  telemetry.rs
api/src/routes/: add_vote.rs  create_poll.rs  mod.rs  result.rs  vote.rs
api/tests/: health_check.rs
app/: .env.local  .pnp.cjs  package-lock.json  package.json
app/.next/: build-manifest.json  trace
app/.next/cache/eslint/: .cache_thnfg1
app/.next/cache/webpack/client-development/: 0.pack  1.pack  13.pack  2.pack  3.pack  4.pack  7.pack  8.pack  index.pack  index.pack.old
app/.next/cache/webpack/server-development/: 0.pack  1.pack  10.pack  11.pack  12.pack  13.pack  14.pack  15.pack  2.pack  3.pack  4.pack  5.pack  6.pack  7.pack  8.pack  9.pack  index.pack  index.pack.old
app/.next/server/: middleware-build-manifest.js  pages-manifest.json
app/.next/server/pages/: _app.js  index.js
app/.next/server/pages/results/: [id].js
app/.next/server/pages/vote/: [id].js
app/.next/static/chunks/: _error.js  webpack.js
app/.next/static/chunks/pages/: _app.js  index.js
app/.next/static/development/: _buildManifest.js
app/.next/static/webpack/: 27e502f4c4b396cb.webpack.hot-update.json  7bb193130df88731.webpack.hot-update.json  98ce6f30ed53a6cb.webpack.hot-update.json  webpack.05e95eb31a1088b4.hot-update.js  webpack.081512910d92d098.hot-update.js  webpack.1a5e3f823ca5ed52.hot-update.js  webpack.27e502f4c4b396cb.hot-update.js  webpack.29c00b0c2dc68783.hot-update.js  webpack.4c58e6c393a307ac.hot-update.js  webpack.4fbdc9a79c689a2d.hot-update.js  webpack.5a11fa927e0fea41.hot-update.js  webpack.64f6ea556493469c.hot-update.js  webpack.6f5b85cf29a31bb2.hot-update.js  webpack.714fe3ebd0faff54.hot-update.js  webpack.7bb193130df88731.hot-update.js  webpack.897f5bdd3b518851.hot-update.js  webpack.98ce6f30ed53a6cb.hot-update.js  webpack.9efbe0f305e6534d.hot-update.js  webpack.9f601ce42412d73e.hot-update.js  webpack.a2274008bf448121.hot-update.js  webpack.aabcd756d49eaee5.hot-update.js  webpack.b265cdb083266387.hot-update.js  webpack.bd0ce08408640019.hot-update.js  webpack.c63f67eb094b47e7.hot-update.js  webpack.f7ab722803f319b7.hot-update.js  webpack.faddd122e8f7100d.hot-update.js  webpack.fc799f178736fe65.hot-update.js
app/.next/static/webpack/pages/: index.081512910d92d098.hot-update.js  index.27e502f4c4b396cb.hot-update.js  index.29c00b0c2dc68783.hot-update.js  index.4c58e6c393a307ac.hot-update.js  index.4fbdc9a79c689a2d.hot-update.js  (+10 more)
app/components/: CopyToClipboard.tsx  clipboard-copy.d.ts  layout.tsx
app/pages/: index.tsx
app/pages/results/: [id].tsx
app/pages/vote/: [id].tsx
app/styles/: Creation.module.css  Layout.module.css  Result.module.css  Vote.module.css  globals.css
configuration/: base.yaml  local.yaml  production.yaml
frontend/: Cargo.toml  app.js  index.html  package-lock.json  package.json  style.css  vote.html
frontend/public/: script.js  styles.css
frontend/src/: main.rs
frontend/views/: creation.ejs  footer.ejs  header.ejs  results.ejs  vote.ejs
migrations/: 20220715182655_create_poll_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: create_poll.rs  health_check.rs  mod.rs
tests/: health_check.rs
(+1 files in other folders)
